[gd_scene load_steps=4 format=3 uid="uid://db0y660270my1"]

[ext_resource type="Script" uid="uid://lftv3tgf441i" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://cmnlkqlfq3spp" path="res://assets/images/Album CoverðŸ’¿ðŸŽ§.jpeg" id="2_wu84c"]
[ext_resource type="Texture2D" uid="uid://cm1ya5e1ewbcu" path="res://assets/images/button.png" id="3_8ln24"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="MainMenu" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -43.5
offset_right = 2.0
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("2_wu84c")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Start" type="TextureButton" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("3_8ln24")
stretch_mode = 0

[node name="Instructions" type="TextureButton" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("3_8ln24")
stretch_mode = 0

[node name="Quit" type="TextureButton" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("3_8ln24")
stretch_mode = 0

[node name="InstructionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -114.0
offset_right = 205.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="RichTextLabel" parent="InstructionsPanel"]
layout_mode = 0
offset_left = 72.0
offset_top = 86.0
offset_right = 341.0
offset_bottom = 148.0
text = "Survive the maze. I advise you not to run. "
horizontal_alignment = 1

[node name="PlayAnyway" type="TextureButton" parent="InstructionsPanel"]
layout_mode = 0
offset_left = 155.0
offset_top = 164.0
offset_right = 251.0
offset_bottom = 260.0
texture_normal = ExtResource("3_8ln24")

[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="InstructionsPanel/PlayAnyway" to="." method="_on_play_anyway_pressed"]
